--- a/roles/nginx/templates/nginx.conf.j2
+++ b/roles/nginx/templates/nginx.conf.j2
@@ -1,13 +1,13 @@
-upstream demo {
+upstream {{ item.key }} {
 {% for server in groups.app %}
-    server {{ server }};
+    server {{ server }}:{{ item.value.backend }};
 {% endfor %}
 }
 
 server {
-    listen 80;
+    listen {{ item.value.frontend }}
 
     location / {
-        proxy_pass http://demo;
+        proxy_pass http://{{ item.key }}
     }
 }
