--- a/roles/nginx/templates/nginx.conf.j2
+++ b/roles/nginx/templates/nginx.conf.j2
@@ -1,6 +1,6 @@
 upstream {{ item.key }} {
 {% for server in groups.app %}
-    server {{ server }}:{{ item.value.backend }};
+    server {{ server }}:{{ item.value.backend }}
 {% endfor %}
 }
 
