--- a/roles/nginx/templates/nginx.conf.j2
+++ b/roles/nginx/templates/nginx.conf.j2
@@ -1,14 +1,13 @@
 upstream {{ item.key }} {
 {% for server in groups.app %}
-    server {{ server }}:{{ item.value.backend }}
+    server {{ server }}:{{ item.value.backend }};
 {% endfor %}
-
+}
 
 server {
-    listen {{ item.value.frontend }}
+    listen {{ item.value.frontend }};
 
     location / {
-        proxy_pass http://{{ item.key }}
+        proxy_pass http://{{ item.key }};
     }
-
 }
