--- a/roles/demo_app/templates/demo.wsgi.j2
+++ b/roles/demo_app/templates/demo.wsgi.j2
@@ -2,7 +2,7 @@ activate_this = '/var/www/demo/.venv/bin/activate_this.py'
 execfile(activate_this, dict(__file__=activate_this))
 
 import os
-os.environ['DATABASE_URI'] = 'mysql://{{ db_username }}:{{ db_user_password }}@{{ db_user_host }}/{{ db_name }}'
+os.environ['DATABASE_URI'] = 'mysql://{{ db_username }}:{{ db_user_password }}@{{ groups.db01[0] }}/{{ db_name }}'
 
 import sys
 sys.path.insert(0, '/var/www/demo')
